--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,7 +17,17 @@ body {
     padding: 15px 35px;
   }
 
-
+.section-title{
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description{
+  color: #757575;
+  text-align: center;
+   font-size:10px ;
+}
 
 
 /*Nav related styles*/
@@ -25,6 +35,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin:0px 200px;
   
 }
 .nav-title{
@@ -37,6 +48,7 @@ nav > ul{
 display: flex;
 align-items: center;
 
+
 }
 nav li{
   list-style: none;
@@ -46,3 +58,48 @@ nav a{
   text-decoration: none;
   color: #474747;
 }
+
+/*header style*/
+.header{
+  background-color: #FFF8F3;
+  background-image: url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+.banner{
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.banner-content{
+max-width: 500px;
+}
+.banner .profile-picture{
+ width: 500px;
+}
+.banner-greeting{
+   font: 45px;
+   color: #474747;
+   margin-bottom: 0px;
+}
+.banner-title{
+  font-size:85px ;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner-discription{
+  margin-top: 0;
+}
+
+/*main section style*/
+/*about section style*/
+.about{
+  padding: 130px;
+  border-radius: 10px;
+  background: #FFF8F3;
+  margin: 130px ;
+
+}
+
