about info added

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -89,6 +89,12 @@ max-width: 500px;
   margin-top: 5px;
   margin-bottom: 20px;
 }
+
+/*main section styles*/
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
 .banner-discription{
   margin-top: 0;
 }
@@ -102,4 +108,15 @@ max-width: 500px;
   margin: 130px ;
 
 }
+.about-info-container{
+  display: flex;
+  justify-content: space-around;
+  
+}
+.about-info{
+  text-align: center;
+}
+
+
+
 
