--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -95,6 +95,10 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+
+main section{
+  margin-top: 130px;
+}
 .banner-discription{
   margin-top: 0;
 }
@@ -116,6 +120,56 @@ main{
 .about-info{
   text-align: center;
 }
+#what-i-do-description{
+  padding: 30px 150px;
+}
+.skill-container{
+  display: flex;
+  gap: 24px;
+}
+.skill{
+  padding: 30px; 
+  border-radius: 5px;
+  background-color: #FFF;
+  box-shadow: 0px 6px 50px rgb(0,0,0,0.06) ;
+}
+.skill-description{
+  color: #757575;
+}
+
+.resume-column-title{
+   color: #474747;
+   font-size: 30px;
+   font-weight: 700;
+   margin-bottom: 10px ;
+}
+.resume-container{
+  display: flex;
+  gap: 50px;
+}
+
+.resume-institude{
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+
+.resume-institude , .resume-item-description{
+  color: #757575;
+}
+.resume-item-title{
+      color: #474747;
+      font-size: 25px;
+      font-weight: 700;
+}
+.resume-container hr{
+  margin: 30px 30px;
+}
+.download-cv{
+  text-align: center;
+  margin-top:50px ;
+}
+
+
 
 
 
