--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -168,6 +168,42 @@ main section{
   text-align: center;
   margin-top:50px ;
 }
+footer{
+  display: flex;
+  gap: 100px;
+  background-color:#FFF8F3;
+  margin-top: 100px;
+  padding: 130px 230px;
+}
+.footer-column{
+  width: 50%;
+ 
+}
+.social-links a{
+  margin-right: 25px;
+}
+
+.contact input[type="text"] ,.contact input[type="email"], textarea {
+  display: block;
+  margin:25px;
+  padding: 18px 35px;
+  color: #757575;
+  border-radius: 5px;
+  background-color: #FFF;
+  border: 0px;
+  width: 100%;
+}
+
+.input_button {
+  margin: 25px;
+}
+.footer-text{
+  text-align: left;
+}
+
+
+
+
 
 
 
